--- a/module-3/lab-supervised-learning-evaluation/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-evaluation/your-code/main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>cap-surface</th>\n",
+       "      <th>cap-color</th>\n",
+       "      <th>bruises</th>\n",
+       "      <th>odor</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>gill-size</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stalk-surface-below-ring</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>veil-type</th>\n",
+       "      <th>veil-color</th>\n",
+       "      <th>ring-number</th>\n",
+       "      <th>ring-type</th>\n",
+       "      <th>spore-print-color</th>\n",
+       "      <th>population</th>\n",
+       "      <th>habitat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>y</td>\n",
+       "      <td>t</td>\n",
+       "      <td>a</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e</td>\n",
+       "      <td>b</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>l</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p</td>\n",
+       "      <td>x</td>\n",
+       "      <td>y</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e</td>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>g</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>w</td>\n",
+       "      <td>b</td>\n",
+       "      <td>k</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>e</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  class cap-shape cap-surface cap-color bruises odor gill-attachment  \\\n",
+       "0     p         x           s         n       t    p               f   \n",
+       "1     e         x           s         y       t    a               f   \n",
+       "2     e         b           s         w       t    l               f   \n",
+       "3     p         x           y         w       t    p               f   \n",
+       "4     e         x           s         g       f    n               f   \n",
+       "\n",
+       "  gill-spacing gill-size gill-color  ... stalk-surface-below-ring  \\\n",
+       "0            c         n          k  ...                        s   \n",
+       "1            c         b          k  ...                        s   \n",
+       "2            c         b          n  ...                        s   \n",
+       "3            c         n          n  ...                        s   \n",
+       "4            w         b          k  ...                        s   \n",
+       "\n",
+       "  stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
+       "0                      w                      w         p          w   \n",
+       "1                      w                      w         p          w   \n",
+       "2                      w                      w         p          w   \n",
+       "3                      w                      w         p          w   \n",
+       "4                      w                      w         p          w   \n",
+       "\n",
+       "  ring-number ring-type spore-print-color population habitat  \n",
+       "0           o         p                 k          s       u  \n",
+       "1           o         p                 n          n       g  \n",
+       "2           o         p                 n          n       m  \n",
+       "3           o         p                 k          s       u  \n",
+       "4           o         e                 n          a       g  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n"
    ]
@@ -75,9 +282,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8124 entries, 0 to 8123\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                    Non-Null Count  Dtype \n",
+      "---  ------                    --------------  ----- \n",
+      " 0   class                     8124 non-null   object\n",
+      " 1   cap-shape                 8124 non-null   object\n",
+      " 2   cap-surface               8124 non-null   object\n",
+      " 3   cap-color                 8124 non-null   object\n",
+      " 4   bruises                   8124 non-null   object\n",
+      " 5   odor                      8124 non-null   object\n",
+      " 6   gill-attachment           8124 non-null   object\n",
+      " 7   gill-spacing              8124 non-null   object\n",
+      " 8   gill-size                 8124 non-null   object\n",
+      " 9   gill-color                8124 non-null   object\n",
+      " 10  stalk-shape               8124 non-null   object\n",
+      " 11  stalk-root                8124 non-null   object\n",
+      " 12  stalk-surface-above-ring  8124 non-null   object\n",
+      " 13  stalk-surface-below-ring  8124 non-null   object\n",
+      " 14  stalk-color-above-ring    8124 non-null   object\n",
+      " 15  stalk-color-below-ring    8124 non-null   object\n",
+      " 16  veil-type                 8124 non-null   object\n",
+      " 17  veil-color                8124 non-null   object\n",
+      " 18  ring-number               8124 non-null   object\n",
+      " 19  ring-type                 8124 non-null   object\n",
+      " 20  spore-print-color         8124 non-null   object\n",
+      " 21  population                8124 non-null   object\n",
+      " 22  habitat                   8124 non-null   object\n",
+      "dtypes: object(23)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n"
    ]
@@ -132,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
